--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/CreateEdit.cshtml
@@ -1,26 +1,33 @@
 ﻿@model GeneralPolicyViewModel
 @{
-    ViewBag.Title = Model.GeneralPolicyMasterId > 0 ? "Update Policy" : "Add Policy";
+    ViewBag.Title = Model.GeneralPolicyMasterId > 0 ? "Update General Policy" : "Add General Policy";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel moduleDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.ModuleList.ToString(), DropdownName = "PolicyRelatedToModuleCode", DropdownSelectedValue = Model.PolicyRelatedToModuleCode };
+    string css = Model.GeneralPolicyMasterId > 0 ? "col-lg-10" : "col-lg-12";
+      DropdownViewModel moduleDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.ModuleList.ToString(), DropdownName = "PolicyRelatedToModuleCode", DropdownSelectedValue = Model.PolicyRelatedToModuleCode };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12">
+            @if (Model.GeneralPolicyMasterId > 0)
+            {
+                <div class="col-lg-2">
+                    @Html.Partial("~/Views/GeneralMaster/GeneralPolicyMaster/_GeneralPolicySidePannel.cshtml", Model.PolicyCode)
+                </div>
+            }
+            <div class="@css">
                 <div class="card">
                     <div class="card-header">
                         <div class="row align-items-center">
                             <div class="col">
                                 @if (Model.GeneralPolicyMasterId > 0)
                                 {
-                                    <h4 class="card-title">Update Policy</h4>
+                                    <h4 class="card-title">Update General Policy</h4>
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create Policy</h4>
+                                    <h4 class="card-title">Create General Policy</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
@@ -30,7 +37,7 @@
                         {
                             @Html.HiddenFor(m => m.GeneralPolicyMasterId)
                             <div class="row">
-                                <div class="col-lg-3">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PolicyCode, new { @class = "form-label required" })
                                         @if (Model.GeneralPolicyMasterId > 0)
@@ -41,10 +48,10 @@
                                         {
                                             @Html.TextBoxFor(x => x.PolicyCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         }
-                                        @Html.ValidationMessageFor(x => x.PolicyCode)                                        
+                                        @Html.ValidationMessageFor(x => x.PolicyCode)
                                     </div>
                                 </div>
-                                <div class="col-lg-3">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PolicyName, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PolicyName, new { @class = "form-control" })
@@ -53,30 +60,38 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PolicyDescription, new { @class = "form-label required" })
-                                        @Html.TextAreaFor(x => x.PolicyDescription, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.PolicyDescription)
-                                    </div>
-                                </div>
-                                <div class="col-lg-5">
-                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.PolicyRelatedToModuleCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", moduleDropdown)
                                         @Html.ValidationMessageFor(x => x.PolicyRelatedToModuleCode)
                                     </div>
-                                </div> 
-                                <div class="col-lg-5">
+                                </div>
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PolicyApplicableStatus, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PolicyApplicableStatus, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PolicyApplicableStatus)
                                     </div>
                                 </div>
-                                <div class="col-lg-2">
+                                <div class="col-lg-12">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PolicyDescription, new { @class = "form-label required" })
+                                        @Html.TextAreaFor(x => x.PolicyDescription, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.PolicyDescription)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsPolicyActive, new { @class = "form-label" })
                                         <div class="form-check">
                                             @Html.CheckBoxFor(x => x.IsPolicyActive, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div> 
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsCommonPolicy, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsCommonPolicy, new { @class = "form-check-input" })
                                         </div>
                                     </div>
                                 </div>
