--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/GeneralPolicyRules/_GeneralPolicyRulesList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/GeneralPolicyRules/_GeneralPolicyRulesList.cshtml
@@ -1,39 +1,33 @@
-﻿@model GeneralPolicyListViewModel
+﻿@model GeneralPolicyRulesListViewModel
 @{
     Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <div class="row">
-    @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
-    @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
-</div>
-<div class="row">
     <div class="col-sm-12 table-responsive">
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
-                @if (Model?.GeneralPolicyList?.Count > 0)
+                @if (Model?.GeneralPolicyRulesList?.Count > 0)
                 {
-                    foreach (var item in Model?.GeneralPolicyList)
+                    foreach (var item in Model?.GeneralPolicyRulesList)
                     {
                         <tr>
-                            <td>@item.PolicyName</td>
-                            <td>@item.PolicyCode</td>
-                            <td>@item.PolicyRelatedToModuleCode</td>
-                            <td>@item.PolicyApplicableStatus</td>
-                            <td>
-                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsPolicyActive)
-                            </td>
-                            <td>
-                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsCommonPolicy)
-                            </td>
+                            <td>@item.PolicyQuestionDescription</td>
+                            <td>@item.PolicyRange</td>
+                            <td>@item.PolicyDefaultAnswer</td>
+                            <td>@item.PolicyAnsType</td>
+                            <td>@item.RangeSeparateBy</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?policyCode=@item.PolicyCode" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/EditRules?generalPolicyRulesId=@item.GeneralPolicyRulesId" title="Update" class="btn btn-sm btn-soft-success btn-circle">
+                                    <i class="fas fa-edit"></i>
+                                </a>
+                                <span class="m-2">|</span>
                                 <!-- Delete Button Triggering Modal -->
-                                <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.GeneralPolicyMasterId"><i class="fas fa-trash-alt"></i></a>
+                                <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.GeneralPolicyRulesId"><i class="fas fa-trash-alt"></i></a>
                                 <!-- Delete Confirmation Modal -->
-                                <div class="modal fade" id="confirmDeleteModal_@item.GeneralPolicyMasterId" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+                                <div class="modal fade" id="confirmDeleteModal_@item.GeneralPolicyRulesId" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
                                     <div class="modal-dialog modal-dialog-centered" style="max-width: 500px;" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -46,8 +40,8 @@
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                                <!-- Delete action with GeneralPolicyMasterId parameter -->
-                                                <a href="../@controllerName/Delete?policyCode=@item.PolicyCode" class="btn btn-outline-danger">Delete</a>
+                                                <!-- Delete action with TaskSchedulerMasterId parameter -->
+                                                <a href="../@controllerName/DeleteRules?generalPolicyRulesIds=@item.GeneralPolicyRulesId" class="btn btn-outline-danger">Delete</a>
                                             </div>
                                         </div>
                                     </div>
@@ -60,4 +54,3 @@
         </table>
     </div>
 </div>
-@Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
