--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/CreateEdit.cshtml
@@ -4,7 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     string css = Model.GeneralPolicyMasterId > 0 ? "col-lg-10" : "col-lg-12";
-      DropdownViewModel moduleDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.ModuleList.ToString(), DropdownName = "PolicyRelatedToModuleCode", DropdownSelectedValue = Model.PolicyRelatedToModuleCode };
+    DropdownViewModel moduleDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.ModuleList.ToString(), DropdownName = "PolicyRelatedToModuleCode", DropdownSelectedValue = Model.PolicyRelatedToModuleCode, IsDisabled = Model.GeneralPolicyMasterId > 0 };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -36,6 +36,11 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.GeneralPolicyMasterId)
+                            @if (Model.GeneralPolicyMasterId > 0)
+                            {
+                                @Html.HiddenFor(m => m.PolicyApplicableStatus)
+                                @Html.HiddenFor(m => m.PolicyRelatedToModuleCode)
+                            }
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="mb-3">
@@ -68,7 +73,15 @@
                                 <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PolicyApplicableStatus, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PolicyApplicableStatus, new { @class = "form-control" })
+                                        @if (Model.GeneralPolicyMasterId > 0)
+                                        {
+                                            @Html.HiddenFor(x => x.PolicyApplicableStatus)
+                                            @Html.DropDownListFor(x => x.PolicyApplicableStatus, ViewData["PolicyApplicableStatus"] as List<SelectListItem>, new { @class = "form-select", disabled = "disabled" })
+                                        }
+                                        else
+                                        {
+                                            @Html.DropDownListFor( x => x.PolicyApplicableStatus, ViewData["PolicyApplicableStatus"] as List<SelectListItem>, new { @class = "form-select" })
+                                        }
                                         @Html.ValidationMessageFor(x => x.PolicyApplicableStatus)
                                     </div>
                                 </div>
@@ -84,14 +97,6 @@
                                         @Html.LabelFor(x => x.IsPolicyActive, new { @class = "form-label" })
                                         <div class="form-check">
                                             @Html.CheckBoxFor(x => x.IsPolicyActive, new { @class = "form-check-input" })
-                                        </div>
-                                    </div>
-                                </div> 
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsCommonPolicy, new { @class = "form-label" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsCommonPolicy, new { @class = "form-check-input" })
                                         </div>
                                     </div>
                                 </div>
