--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/GeneralPolicyRules/CreateEditPolicyRules.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/GeneralPolicyRules/CreateEditPolicyRules.cshtml
@@ -36,19 +36,14 @@
                         {
                             @Html.HiddenFor(m => m.PolicyCode)
                             @Html.HiddenFor(m => m.GeneralPolicyRulesId)
+                            @Html.HiddenFor(m => m.GeneralPolicyDetailId)
+                            @Html.HiddenFor(m => m.PolicyApplicableStatus)
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PolicyCode, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PolicyCode, new { @class = "form-control", @readonly = "readonly", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
                                         @Html.ValidationMessageFor(x => x.PolicyCode)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.PolicyAnsType, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PolicyAnsType, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.PolicyAnsType)
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
@@ -60,9 +55,23 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.RangeSeparateBy, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.RangeSeparateBy, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.RangeSeparateBy)
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.PolicyDefaultAnswer, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PolicyDefaultAnswer, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PolicyDefaultAnswer)
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PolicyAnsType, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.PolicyAnsType, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.PolicyAnsType)
                                     </div>
                                 </div>
                                 <div class="col-lg-12">
@@ -72,11 +81,27 @@
                                         @Html.ValidationMessageFor(x => x.PolicyQuestionDescription)
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.RangeSeparateBy, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.RangeSeparateBy, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.RangeSeparateBy)
+                                <div class="row" id="PolicyDetails">
+                                    <div class="col-lg-12">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.PolicyAnswered, new { @class = "form-label required" })
+                                            @Html.TextAreaFor(x => x.PolicyAnswered, new { @class = "form-control" })
+                                            @Html.ValidationMessageFor(x => x.PolicyAnswered)
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.ApplicableFromDate, new { @class = "form-label" })
+                                            @Html.TextBoxFor(x => x.ApplicableFromDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @id = "ApplicableFromDate" })
+                                            @Html.ValidationMessageFor(x => x.ApplicableFromDate)
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <div class="mb-3">
+                                            @Html.LabelFor(x => x.ApplicableUptoDate, new { @class = "form-label" })
+                                            @Html.TextBoxFor(x => x.ApplicableUptoDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @id = "ApplicableUptoDate" })
+                                            @Html.ValidationMessageFor(x => x.ApplicableUptoDate)
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -89,3 +114,51 @@
         </div>
     </div>
 </div>
+@section scripts {
+    <script type="text/javascript">
+        function updatePolicyDetails() {
+            var status = $('#PolicyApplicableStatus').val();
+
+            if (status === 'General') {
+                $('#PolicyDetails').show();
+            } else {
+                $('#PolicyDetails').hide();
+            }
+        }
+
+        $(document).ready(function () {
+            updatePolicyDetails();
+
+            // Initialize From Date
+            $("#ApplicableFromDate").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                showMonthAfterYear: false,
+                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
+                language: "en",
+                autoSize: true,
+                showButtonPanel: true,
+                yearRange: "2024:2027",
+                closeText: "Clear",
+                minDate: new Date(2022, 0, 1),
+                maxDate: new Date(2035, 11, 31),
+                onSelect: function (selectedDate) {
+                    var fromDate = $(this).datepicker("getDate");
+                    $("#ApplicableUptoDate").datepicker("option", "minDate", fromDate);
+                }
+            });
+
+            // Initialize Upto Date
+            $("#ApplicableUptoDate").datepicker({
+                changeMonth: true,
+                changeYear: true,
+                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
+                language: "en",
+                autoSize: true,
+                yearRange: "2025:2027",
+                minDate: new Date(2022, 0, 1),
+                maxDate: new Date(2035, 11, 31)
+            });
+        });
+    </script>
+}
