--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/GeneralPolicyRules/_GeneralPolicyRulesList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/GeneralPolicyRules/_GeneralPolicyRulesList.cshtml
@@ -6,6 +6,7 @@
 }
 <div class="row">
     <div class="col-sm-12 table-responsive">
+      
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
@@ -15,12 +16,13 @@
                     {
                         <tr>
                             <td>@item.PolicyQuestionDescription</td>
+                            <td>@item.PolicyApplicableStatus</td>
                             <td>@item.PolicyRange</td>
                             <td>@item.PolicyDefaultAnswer</td>
                             <td>@item.PolicyAnsType</td>
                             <td>@item.RangeSeparateBy</td>
                             <td class="text-center">
-                                <a href="../@controllerName/EditRules?generalPolicyRulesId=@item.GeneralPolicyRulesId" title="Update" class="btn btn-sm btn-soft-success btn-circle">
+                                <a href="../@controllerName/EditRules?generalPolicyRulesId=@item.GeneralPolicyRulesId&policyApplicableStatus=@item.PolicyApplicableStatus" title="Update" class="btn btn-sm btn-soft-success btn-circle">
                                     <i class="fas fa-edit"></i>
                                 </a>
                                 <span class="m-2">|</span>
