--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/GeneralPolicyRules/CreateEditPolicyRules.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralPolicyMaster/GeneralPolicyRules/CreateEditPolicyRules.cshtml
@@ -62,13 +62,6 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PolicyDefaultAnswer, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PolicyDefaultAnswer, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.PolicyDefaultAnswer)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.PolicyAnsType, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PolicyAnsType, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PolicyAnsType)
@@ -81,29 +74,39 @@
                                         @Html.ValidationMessageFor(x => x.PolicyQuestionDescription)
                                     </div>
                                 </div>
-                                <div class="row" id="PolicyDetails">
-                                    <div class="col-lg-12">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.PolicyAnswered, new { @class = "form-label required" })
-                                            @Html.TextAreaFor(x => x.PolicyAnswered, new { @class = "form-control" })
-                                            @Html.ValidationMessageFor(x => x.PolicyAnswered)
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.ApplicableFromDate, new { @class = "form-label" })
-                                            @Html.TextBoxFor(x => x.ApplicableFromDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @id = "ApplicableFromDate" })
-                                            @Html.ValidationMessageFor(x => x.ApplicableFromDate)
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.ApplicableUptoDate, new { @class = "form-label" })
-                                            @Html.TextBoxFor(x => x.ApplicableUptoDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @id = "ApplicableUptoDate" })
-                                            @Html.ValidationMessageFor(x => x.ApplicableUptoDate)
-                                        </div>
+                                <div class="col-lg-12">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.PolicyDefaultAnswer, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.PolicyDefaultAnswer, new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(x => x.PolicyDefaultAnswer)
                                     </div>
                                 </div>
+                                @if (Model.PolicyApplicableStatus == PolicyApplicableStatusEnum.General.ToString())
+                                {
+                                    <div class="row">
+                                        <div class="col-lg-12">
+                                            <div class="mb-3">
+                                                @Html.LabelFor(x => x.PolicyAnswered, new { @class = "form-label" })
+                                                @Html.TextAreaFor(x => x.PolicyAnswered, new { @class = "form-control" })
+                                                @Html.ValidationMessageFor(x => x.PolicyAnswered)
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="mb-3">
+                                                @Html.LabelFor(x => x.ApplicableFromDate, new { @class = "form-label" })
+                                                @Html.TextBoxFor(x => x.ApplicableFromDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @id = "ApplicableFromDate" })
+                                                @Html.ValidationMessageFor(x => x.ApplicableFromDate)
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <div class="mb-3">
+                                                @Html.LabelFor(x => x.ApplicableUptoDate, new { @class = "form-label" })
+                                                @Html.TextBoxFor(x => x.ApplicableUptoDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @id = "ApplicableUptoDate" })
+                                                @Html.ValidationMessageFor(x => x.ApplicableUptoDate)
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/GetGeneralPolicyRulesList?policyCode=@Model.PolicyCode" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
@@ -116,20 +119,7 @@
 </div>
 @section scripts {
     <script type="text/javascript">
-        function updatePolicyDetails() {
-            var status = $('#PolicyApplicableStatus').val();
-
-            if (status === 'General') {
-                $('#PolicyDetails').show();
-            } else {
-                $('#PolicyDetails').hide();
-            }
-        }
-
         $(document).ready(function () {
-            updatePolicyDetails();
-
-            // Initialize From Date
             $("#ApplicableFromDate").datepicker({
                 changeMonth: true,
                 changeYear: true,
@@ -147,8 +137,6 @@
                     $("#ApplicableUptoDate").datepicker("option", "minDate", fromDate);
                 }
             });
-
-            // Initialize Upto Date
             $("#ApplicableUptoDate").datepicker({
                 changeMonth: true,
                 changeYear: true,
