--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
@@ -38,6 +38,10 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.OrganisationCentreMasterId)
+                            @Html.HiddenFor(m => m.LogoMediaId)
+                            @Html.HiddenFor(m => m.LogoSmallMediaId)
+                            @Html.HiddenFor(m => m.LogoMediaPath)
+                            @Html.HiddenFor(m => m.LogoSmallMediaPath)
                             <div class="col-lg-4">
                                 <div class="mb-3">
                                     @Html.LabelFor(x => x.OrganisationId, new { @class = "form-label required"})
@@ -279,6 +283,7 @@
         </div>
     </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 @section scripts {
     <script type="text/javascript">
         $(function () {
@@ -299,6 +304,78 @@
                 },
                 maxDate: new Date(),
             });
+        });
+
+        var logoMediaPath = $('#LogoMediaPath').val();
+        if (!(logoMediaPath === '' || logoMediaPath === null)) {
+            $('#logoPreview').attr('src', $('#LogoMediaPath').val()).show();
+        }
+
+        $('#logoUpload').change(function () {
+            var formData = new FormData();
+            var fileInput = $('#logoUpload')[0];
+            $("#notificationDivId").hide();
+            if (fileInput.files.length > 0) {
+                CoditechCommon.ShowLodder();
+                formData.append('files', fileInput.files[0]);
+                $.ajax({
+                    url: '/GeneralCommon/UploadMedia',  // Ensure this matches the route
+                    type: 'POST',
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    success: function (response) {
+                        if (response.status == true || response.status == "true") {
+                            $('#logoPreview').attr('src', response.imageUrl).show();
+                            $('input[name="LogoMediaId"]').val(response.photoMediaId);
+                        }
+                        else {
+                            CoditechNotification.DisplayNotificationMessage(response.message, "error")
+                        }
+                        CoditechCommon.HideLodder();
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) {
+                        console.error('Error uploading file:', textStatus, errorThrown);
+                        CoditechCommon.HideLodder();
+                    }
+                });
+            }
+        });
+
+        var signatureMediaPath = $('#LogoSmallMediaPath').val();
+        if (!(signatureMediaPath === '' || signatureMediaPath === null)) {
+            $('#logoSmallPreview').attr('src', $('#LogoSmallMediaPath').val()).show();
+        }
+
+        $('#logoSmallUpload').change(function () {
+            var formData = new FormData();
+            var fileInput = $('#logoSmallUpload')[0];
+            $("#notificationDivId").hide();
+            if (fileInput.files.length > 0) {
+                CoditechCommon.ShowLodder();
+                formData.append('files', fileInput.files[0]);
+                $.ajax({
+                    url: '/GeneralCommon/UploadMedia',  // Ensure this matches the route
+                    type: 'POST',
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    success: function (response) {
+                        if (response.status == true || response.status == "true") {
+                            $('#logoSmallPreview').attr('src', response.imageUrl).show();
+                            $('input[name="LogoSmallMediaId"]').val(response.photoMediaId);
+                        }
+                        else {
+                            CoditechNotification.DisplayNotificationMessage(response.message, "error")
+                        }
+                        CoditechCommon.HideLodder();
+                    },
+                    error: function (jqXHR, textStatus, errorThrown) {
+                        console.error('Error uploading file:', textStatus, errorThrown);
+                        CoditechCommon.HideLodder();
+                    }
+                });
+            }
         });
     </script>
 }
